chore(*): Rename project as radio-scraper

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "radioeksen-scraper",
+  "name": "radio-scraper",
   "version": "0.0.1",
   "description": "",
   "main": "src/index.js",
